more linux release testing

--- a/.github/workflows/cut-release.yaml
+++ b/.github/workflows/cut-release.yaml
@@ -30,6 +30,7 @@ jobs:
       metadataWebsiteUrl: "https://www.example.com/this/is/optional"
       skipMacOS: true
       # skipLinux: true
+      toolingRepo: "OpenGOAL-Mods/OG-Mod-Base"
       # toolingBinaryDir: "out/build/Release/bin"
       gameAssetsDir: "game/assets"
       # copyEntireBinaryDir: true
